DERBY-6230: Use the JVM's cache of Number instances in ReuseFactory
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1487773 13f79535-47bb-0310-9956-ffa450edef68